--- a/CoreChess/CoreChess.csproj
+++ b/CoreChess/CoreChess.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Projektanker.Icons.Avalonia" Version="5.5.0" />
     <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="5.5.0" />
     <PackageReference Include="AvaloniaColorPicker" Version="1.3.4" />
-    <PackageReference Include="Octokit" Version="2.0.1" />
+    <PackageReference Include="Octokit" Version="3.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChessLib\ChessLib.csproj" />
@@ -157,6 +157,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Abstracts" />
+    <Folder Include="Controls\Models" />
     <Folder Include="OpeningBooks\" />
     <Folder Include="Audio\" />
     <Folder Include="Localizer\" />
@@ -188,6 +190,73 @@
   <ItemGroup>
     <Compile Update="Controls\ItemsList.axaml.cs">
       <DependentUpon>ItemsList.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Pages\PgnGamesWindow.axaml.cs">
+      <DependentUpon>PgnGamesWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\GameEndedWindow.axaml.cs">
+      <DependentUpon>GameEndedWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\UpdateWindow.axaml.cs">
+      <DependentUpon>UpdateWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\SettingsWindow.axaml.cs">
+      <DependentUpon>SettingsWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\MoveCommentWindow.axaml.cs">
+      <DependentUpon>MoveCommentWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\ColorPickerWindow.axaml.cs">
+      <DependentUpon>ColorPickerWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\EnginesWindow.axaml.cs">
+      <DependentUpon>EnginesWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\GamesDatabaseWindow.axaml.cs">
+      <DependentUpon>GamesDatabaseWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\EngineSettingsWindow.axaml.cs">
+      <DependentUpon>EngineSettingsWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\MainPage.axaml.cs">
+      <DependentUpon>MainWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Dialogs\MessageWindow.axaml.cs">
+      <DependentUpon>MessageWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Views\SplashWindow.axaml.cs">
+      <DependentUpon>SplashWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Dialogs\WaitWindow.axaml.cs">
+      <DependentUpon>WaitWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Dialogs\PromotionWindow.axaml.cs">
+      <DependentUpon>PromotionWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Controls\Spinner.axaml.cs">
+      <DependentUpon>Spinner.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Dialogs\AboutDialog.axaml.cs">
+      <DependentUpon>AboutWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Dialogs\NewGameDialog.axaml.cs">
+      <DependentUpon>NewGameWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
 
