--- a/CoreChess/CoreChess.csproj
+++ b/CoreChess/CoreChess.csproj
@@ -231,7 +231,7 @@
       <DependentUpon>MainWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="Dialogs\MessageWindow.axaml.cs">
+    <Compile Update="Dialogs\MessageDialog.axaml.cs">
       <DependentUpon>MessageWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -239,7 +239,7 @@
       <DependentUpon>SplashWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="Dialogs\WaitWindow.axaml.cs">
+    <Compile Update="Dialogs\WaitDialog.axaml.cs">
       <DependentUpon>WaitWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
