--- a/CoreChess/CoreChess.csproj
+++ b/CoreChess/CoreChess.csproj
@@ -195,10 +195,6 @@
       <DependentUpon>PgnGamesWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="Pages\GameEndedWindow.axaml.cs">
-      <DependentUpon>GameEndedWindow.axaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Update="Pages\UpdateWindow.axaml.cs">
       <DependentUpon>UpdateWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
@@ -260,6 +256,10 @@
     </Compile>
     <Compile Update="Dialogs\ColorPickerDialog.axaml.cs">
       <DependentUpon>ColorPickerWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Dialogs\GameEndedDialog.axaml.cs">
+      <DependentUpon>GameEndedWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
