--- a/CoreChess/CoreChess.csproj
+++ b/CoreChess/CoreChess.csproj
@@ -22,14 +22,17 @@
     <AvaloniaResource Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.19" />
+    <PackageReference Include="Avalonia" Version="11.0.0" />
     <PackageReference Include="Avalonia.Angle.Windows.Natives" Version="2.1.18905.20220610" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.19" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.19" />
-    <PackageReference Include="Projektanker.Icons.Avalonia" Version="5.13.0" />
-    <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="5.13.0" />
-    <PackageReference Include="AvaloniaColorPicker" Version="1.3.4" />
-    <PackageReference Include="Octokit" Version="6.0.0" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
+    <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.0.0" />
+    <PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.0.0" />
+    
+    <PackageReference Include="Projektanker.Icons.Avalonia" Version="6.6.0-rc1.1" />
+    <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="6.6.0-rc1.1" />
+    <PackageReference Include="Octokit" Version="7.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChessLib\ChessLib.csproj" />
@@ -200,7 +203,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="Pages\EnginesPage.axaml.cs">
-      <DependentUpon>EnginesWindow.axaml</DependentUpon>
+      <DependentUpon>EnginesPage.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="Pages\GamesDatabasePage.axaml.cs">
@@ -244,14 +247,6 @@
     </Compile>
     <Compile Update="Dialogs\MoveCommentDialog.axaml.cs">
       <DependentUpon>MoveCommentWindow.axaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="Dialogs\ColorPickerDialog.axaml.cs">
-      <DependentUpon>ColorPickerWindow.axaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="Dialogs\ColorPickerDialog.axaml.cs">
-      <DependentUpon>ColorPickerWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="Dialogs\GameEndedDialog.axaml.cs">
