--- a/CoreChess/CoreChess.csproj
+++ b/CoreChess/CoreChess.csproj
@@ -237,10 +237,6 @@
       <DependentUpon>AboutWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="Dialogs\NewGameDialog.axaml.cs">
-      <DependentUpon>NewGameWindow.axaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Update="Dialogs\EngineSettingsDialog.axaml.cs">
       <DependentUpon>EngineSettingsWindow.axaml</DependentUpon>
       <SubType>Code</SubType>
@@ -255,6 +251,10 @@
     </Compile>
     <Compile Update="Dialogs\UpdateDialog.axaml.cs">
       <DependentUpon>UpdateDialog.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Pages\NewGamePage.axaml.cs">
+      <DependentUpon>NewGameDialog.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
